<resources>
    <string name="app_name">UGD3_A_10181</string>
    <string name="input_data_pegawai">INPUT DATA PEGAWAI</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="nomor_pokok_pegawai">Nomor Pokok Pegawai</string>
    <string name="jabatan_pegawai">Jabatan Pegawai</string>
    <string name="alamat_pegawai">Alamat Pegawai</string>
    <string name="gaji_pegawai">Gaji Pegawai</string>
    <string name="tanggal_masuk_pegawai">Tanggal Masuk Pegawai</string>
    <string name="back">BACK</string>
    <string name="guided_data_binding">GUIDED DATA BINDING</string>
    <string name="semangat_belajar_data_binding">Semangat Belajar Data Binding</string>
    <string name="one_way_data_binding">One Way Data Binding</string>
    <string name="two_way_data_binding">Two Way Data Binding</string>
    <string name="nomor_pokok">Nomor Pokok</string>
    <string name="jabatan">Jabatan</string>
    <string name="gaji_pokok">Gaji Pokok</string>
    <string name="unguided_data_binding">UNGUIDED DATA BINDING</string>
    <string name="alamat_peserta">Alamat Peserta</string>
    <string name="tanggal_vaksin">Tanggal Vaksin</string>
    <string name="tensi_peserta">Tensi Peserta</string>
</resources>