<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <data>
        <variable
            name="pgwi"
            type="com.databinding.gd3_a_10181.twoway.Pegawai" />
        <variable
            name="activity"
            type="com.databinding.gd3_a_10181.twoway.InputDataPegawai" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".twoway.InputDataPegawai" >

        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="28dp"
                android:textSize="34dp"
                android:textAlignment="center"
                android:text="@string/input_data_pegawai"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_below="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="600dp" >

            <androidx.cardview.widget.CardView
                android:layout_below="@+id/navbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="20dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="5dp" >

                <LinearLayout
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twNamaPegawai"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/nama_pegawai" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNamaPegawai"
                            android:inputType="text"
                            android:text="@={pgwi.nama_pegawai}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twNomorPokok"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/nomor_pokok_pegawai" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNomorPokok"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={pgwi.nomor_pokok}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twJabatan"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/jabatan_pegawai" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etJabatanPegawai"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={pgwi.jabatan}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twAlamat"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/alamat_pegawai" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAlamatPegawai"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={pgwi.alamat}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twGajiPegawai"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/gaji_pegawai" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etGajiPegawai"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={pgwi.stringGaji}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twTglMasuk"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/tanggal_masuk_pegawai" >

                        <AutoCompleteTextView
                            android:id="@+id/etTglMasukPegawai"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:text="@={pgwi.tanggal_masuk}"
                            android:onClick="@{activity.btnTanggalMasuk}" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="550dp"
            android:background="@color/white"
            android:padding="20dp" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#EF9B9B"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="@{activity.btnBackPegawai}"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreate"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#DC6B6B"
                android:onClick="@{activity.btnSavePegawai}"
                android:text="@string/create"
                android:textColor="@color/black" />
        </RelativeLayout>

    </RelativeLayout>

</layout>