<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="activity"
            type="com.databinding.gd3_a_10181.MainActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/unguided_data_binding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="15dp"
                    android:text="@string/semangat_belajar_data_binding"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="3"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false" >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/oneWayDataBinding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/teal_200"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="6dp"
                        android:onClick="@{activity.btnOneWay}" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" >

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@drawable/ic_baseline_looks_one_24" />

                            <TextView
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/one_way_data_binding"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/twoWayDataBinding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/teal_700"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="6dp"
                        android:onClick="@{activity.btnTwoWay}" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" >

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@drawable/ic_baseline_looks_two_24" />

                            <TextView
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/two_way_data_binding"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/unguidedDataBinding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/purple_200"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="6dp"
                        android:onClick="@{activity.btnUGDBinding}" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp" >

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@drawable/ic_baseline_add_task_24" />

                            <TextView
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/unguided_data_binding"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</layout>